2008-09-04  Pedro Gracia  <pedro@flumotion.com>

	* po/POTFILES.in:
	Deleted "flumotion/component/plugs/lifecycle.py" entry.
	Removed in r7354.

2008-09-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/plugs/manhole.py:
	  lifecycle module is gone.
	* flumotion/extern/fdpass/__init__.py:
	  Insert some magic that makes flumotion.extern.fdpass.fdpass
	  importable in distcheck mode.

2008-09-03  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/misc/httpserver/admin_gtk.py:
	* flumotion/component/misc/httpserver/httpserver.glade:
	* flumotion/component/misc/httpserver/serverstats.py:
	Updated the http-server UI to better match the http-server UI.
	Removed some obscure statistics from the UI.
	Disabled the cache UI.

2008-09-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/validate-registry.py:
	  Make sure that all plugs can be instantiated.
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/misc/httpserver/cachedprovider.py:
	* flumotion/component/misc/httpserver/httpserver.py:
	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/component/misc/httpserver/localprovider.py:
	* flumotion/component/plugs/rrd.py:
	* flumotion/test/test_component_httpserver.py:
	  Further Plug class renaming.

2008-09-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/plugs/cortado/cortado.py:
	* flumotion/component/plugs/cortado/cortado.xml:
	  Properly fix ComponentCortadoPlug naming.
	  This fixes the build and fixes the assistant.

2008-09-03  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/plugs/cortado/cortado.xml:
	Clean up after Thomas. Rename Cortado plug in the xml too.

2008-09-02  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/plugs/Makefile.am:
	Fix after tired Thomas - add request.py to Makefile.am.

2008-09-02  Thomas Vander Stichele  <thomas at apestaart dot org>
